# CppProjects

./: README.md
Complex/: CMakeLists.txt  theory.txt
Complex/headers/: complex.hpp
Complex/tests/: test.cpp
List/: CMakeLists.txt
List/headers/: list.hpp
List/tests/: test.cpp
Map/: CMakeLists.txt
Map/headers/: map.hpp
Map/tests/: test.cpp
MathCalc/: .gitignore  CMakeLists.txt  main.cpp
NDimArray/: CMakeLists.txt  NDimArray.hpp  test.cpp
Project01/Quaternion_cpp/: CMakeLists.txt
Project01/Quaternion_cpp/headers/: Quaternion.h  Quaternion.hpp  common.h
Project01/Quaternion_cpp/sources/: Quaternion.cpp
Project01/Quaternion_cpp/src/: Quaternion.cpp  Quaternion_test.cpp
Project01/Quaternion_cpp/tests/: Quaternion_test.cpp
Project27/random_c/: .gitignore  CMakeLists.txt
Project27/random_c/headers/: common.h  random.h
Project27/random_c/sources/: random.c
Project27/random_c/tests/: input_file_example.txt  random_test.c  variation_search.c
Project27/random_cpp/: CMakeLists.txt
Project27/random_cpp/headers/: common.hpp  random.hpp
Project27/random_cpp/sources/: random.cpp
Project27/random_cpp/tests/: random_cross_test.cpp  random_test.cpp  variation_search.cpp
Tasks00/: CMakeLists.txt  task01.cpp  task02.cpp  task03.cpp  task04b.cpp  task04c.cpp  task05a.cpp  task05b.cpp  task06.cpp  task07.cpp  task09a.cpp  task09b.cpp  task09c.cpp  task09d.cpp  task09e.cpp  task09f.cpp  task10a.cpp  task10b.cpp  task11.cpp  task12a.cpp  task12b.cpp
Tasks01/: CMakeLists.txt  task01.cpp  task02a.cpp  task02b.cpp  task03.cpp  task04.cpp  task05.cpp  task06.cpp  task07.cpp  task08a.cpp  task08b.cpp
Tasks02/: CMakeLists.txt  task01.cpp  task02.cpp  task03.cpp  task04.cpp  task05.cpp  task06.cpp  task07.cpp  task08a.cpp  task08b.cpp  task08c.cpp  task09.cpp  task10.cpp  task11.cpp  task12.cpp
Tasks03/: CMakeLists.txt  task01a.cpp  task01b.cpp  task01c.cpp  task01d.cpp  task01e.cpp  task01f.cpp  task02a.cpp  task02b.cpp  task02c.cpp  task03.cpp  task04.cpp  task05.cpp  task06a.cpp  task06b.cpp  task06c.cpp  task06d.cpp  task06e.cpp  task06f.cpp  task06g.cpp  task06h.cpp  task06i.cpp
Tasks10/: CMakeLists.txt  task01.cpp  task02.cpp  task03.cpp  task04.cpp  task05.cpp  task06a.cpp  task06b.cpp  task07.cpp  task08.cpp
Tasks11/: CMakeLists.txt  task01.cpp  task02.cpp  task03a.cpp  task03b.cpp  task04.cpp  task05.cpp  task06.cpp  task07a.cpp  task07b.cpp  task08a.cpp  task08b.cpp  task09.cpp  task10.cpp  task11.cpp  task12.cpp  task13.cpp  task14.cpp  task15.cpp  task16a.cpp  task16b.cpp  task17.cpp  task18.cpp  task19a.cpp  task19b.cpp  task19c.cpp  task19d.cpp  task19e.cpp  task19f.cpp  task19g.cpp  task19h.cpp
Tasks12/: CMakeLists.txt  task01.cpp  task02a.cpp  task02b.cpp  task02c.cpp  task02d.cpp  task02e.cpp  task03.cpp  task04a.cpp  task04b.cpp  task04c.cpp  task04d.cpp  task05a.cpp  task05b.cpp  task06.cpp  task07a.cpp  task07b.cpp  task07c.cpp  task08a.cpp  task08b.cpp  task09c.cpp  task10.cpp  task38.cpp  task38l.cpp  task50a.cpp  task50b1.cpp  task50b2.cpp  task50b3.cpp  task50c.cpp  task50d.cpp  task51.cpp  task52.cpp
Tasks13/: .gitignore  CMakeLists.txt  task01.cpp  task02.cpp  task04.cpp  task05.cpp  task06.cpp  task07.cpp  task08.cpp  task09.cpp  task10a.cpp  task10b.cpp  task10c.cpp  task19.cpp  task19b.cpp  task22.cpp
Tasks20/: CMakeLists.txt  task14.cpp  task15.cpp
Tasks21/: CMakeLists.txt  Matrix.hpp  task05.cpp  task10.cpp
Words/: CMakeLists.txt  input_example.txt  main.cpp
temp/: CMakeLists.txt  task01.cpp  task02.cpp  task03.cpp  task04a.cpp  task04b.cpp  task04c.cpp  task05a.cpp  task05b.cpp  task07.cpp  task08.cpp  task09a.cpp  task09b.cpp  task09c.cpp  task09d.cpp  task09e.cpp  task10a.cpp  task11.cpp  task12a.cpp
