cmake_minimum_required(VERSION 3.16)
project(Tasks00)

set(CMAKE_CXX_STANDARD 14)

add_executable(task01 task01.cpp)
add_executable(task02 task02.cpp)
add_executable(task03 task03.cpp)
add_executable(task04a task04a.cpp)
add_executable(task04b task04b.cpp)
add_executable(task04c task04c.cpp)
add_executable(task05a task05a.cpp)
add_executable(task05b task05b.cpp)
add_executable(task06 task06.cpp)
add_executable(task07 task07.cpp)
add_executable(task08 task08.cpp)
add_executable(task09a task09a.cpp)
add_executable(task09b task09b.cpp)
add_executable(task09c task09c.cpp)
add_executable(task09d task09d.cpp)
add_executable(task09e task09e.cpp)
add_executable(task09f task09f.cpp)
add_executable(task10a task10a.cpp)
add_executable(task10b task10b.cpp)
add_executable(task11 task11.cpp)
add_executable(task12a task12a.cpp)
add_executable(task12b task12b.cpp)