cmake_minimum_required(VERSION 3.16)
project(Tasks02)

set(CMAKE_CXX_STANDARD 14)

add_executable(task01 task01.cpp)
add_executable(task02 task02.cpp)
add_executable(task03 task03.cpp)
add_executable(task04 task04.cpp)
add_executable(task05 task05.cpp)
add_executable(task06 task06.cpp)
add_executable(task07 task07.cpp)
add_executable(task08a task08a.cpp)
add_executable(task08b task08b.cpp)
add_executable(task08c task08c.cpp)
add_executable(task09 task09.cpp)
add_executable(task10 task10.cpp)
add_executable(task11 task11.cpp)
add_executable(task12 task12.cpp)