cmake_minimum_required(VERSION 3.16)
project(Tasks03)

set(CMAKE_CXX_STANDARD 14)

add_executable(task01a task01a.cpp)
add_executable(task01b task01b.cpp)
add_executable(task01c task01c.cpp)
add_executable(task01d task01d.cpp)
add_executable(task01e task01e.cpp)
add_executable(task01f task01f.cpp)
add_executable(task02a task02a.cpp)
add_executable(task02b task02b.cpp)
add_executable(task02c task02c.cpp)
add_executable(task03 task03.cpp)
add_executable(task04 task04.cpp)
add_executable(task05 task05.cpp)
add_executable(task06a task06a.cpp)
add_executable(task06b task06b.cpp)
add_executable(task06c task06c.cpp)
add_executable(task06d task06d.cpp)
add_executable(task06e task06e.cpp)
add_executable(task06f task06f.cpp)
add_executable(task06g task06g.cpp)
add_executable(task06h task06h.cpp)
add_executable(task06i task06i.cpp)