cmake_minimum_required(VERSION 3.16)
project(Tasks10)

set(CMAKE_CXX_STANDARD 14)

add_executable(task01 task01.cpp)
add_executable(task02 task02.cpp)
add_executable(task03 task03.cpp)
add_executable(task04 task04.cpp)
add_executable(task05 task05.cpp)
add_executable(task06a task06a.cpp)
add_executable(task06b task06b.cpp)
add_executable(task07 task07.cpp)
add_executable(task08 task08.cpp)