cmake_minimum_required(VERSION 3.16)
project(Tasks11)

set(CMAKE_CXX_STANDARD 14)

add_executable(task01 task01.cpp)
add_executable(task02 task02.cpp)
add_executable(task03a task03a.cpp)
add_executable(task03b task03b.cpp)
add_executable(task04 task04.cpp)
add_executable(task05 task05.cpp)
add_executable(task06 task06.cpp)
add_executable(task07a task07a.cpp)
add_executable(task07b task07b.cpp)
add_executable(task08a task08a.cpp)
add_executable(task08b task08b.cpp)
add_executable(task09 task09.cpp)
add_executable(task10 task10.cpp)
add_executable(task11 task11.cpp)
add_executable(task12 task12.cpp)
add_executable(task13 task13.cpp)
add_executable(task14 task14.cpp)
add_executable(task15 task15.cpp)
add_executable(task16a task16a.cpp)
add_executable(task16b task16b.cpp)
add_executable(task17 task17.cpp)
add_executable(task18 task18.cpp)
add_executable(task19a task19a.cpp)
add_executable(task19b task19b.cpp)
add_executable(task19c task19c.cpp)
add_executable(task19d task19d.cpp)
add_executable(task19e task19e.cpp)
add_executable(task19f task19f.cpp)
add_executable(task19g task19g.cpp)
add_executable(task19h task19h.cpp)