cmake_minimum_required(VERSION 3.16)
project(Tasks12)

set(CMAKE_CXX_STANDARD 14)

add_executable(task01 task01.cpp)
add_executable(task02a task02a.cpp)
add_executable(task02b task02b.cpp)
add_executable(task02c task02c.cpp)
add_executable(task02d task02d.cpp)
add_executable(task02e task02e.cpp)
add_executable(task03 task03.cpp)
add_executable(task04a task04a.cpp)
add_executable(task04b task04b.cpp)
add_executable(task04c task04c.cpp)
add_executable(task04d task04d.cpp)
add_executable(task05a task05a.cpp)
add_executable(task05b task05b.cpp)
add_executable(task06 task06.cpp)
add_executable(task07a task07a.cpp)
add_executable(task07b task07b.cpp)
add_executable(task07c task07c.cpp)
add_executable(task08a task08a.cpp)
add_executable(task08b task08b.cpp)
add_executable(task09a task09a.cpp)
add_executable(task09b task09b.cpp)
add_executable(task09c task09c.cpp)

add_executable(task38l task38l.cpp)
add_executable(task38r task38r.cpp)

add_executable(task50a task50a.cpp)
add_executable(task50b1 task50b1.cpp)
add_executable(task50b2 task50b2.cpp)
add_executable(task50b3 task50b3.cpp)
add_executable(task50c task50c.cpp)
add_executable(task50d task50d.cpp)

add_executable(task51 task51.cpp)
add_executable(task52 task52.cpp)