cmake_minimum_required(VERSION 3.16)
project(Tasks13)

set(CMAKE_CXX_STANDARD 14)

add_executable(task01 task01.cpp)
add_executable(task02 task02.cpp)
add_executable(task03 task03.cpp)
add_executable(task04 task04.cpp)
add_executable(task05 task05.cpp)
add_executable(task06 task06.cpp)
add_executable(task07 task07.cpp)
add_executable(task08 task08.cpp)
add_executable(task09 task09.cpp)

add_executable(task10a task10a.cpp)
add_executable(task10b task10b.cpp)
add_executable(task10c task10c.cpp)

add_executable(task19a task19a.cpp)
add_executable(task19b task19b.cpp)

add_executable(task22 task22.cpp)